# xmppy

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  xmpp2.py
examples/: example.ini  shellBot.py
xmppBot/: Messenger.py  gpg_holder.py
xmppy/: Messenger.py  __init__.py
